# pyprocar

./: .gitignore  .pytest.ini  .readthedocs.yaml  .travis.yml  AGENTS.md  ARCHITECTURE.md  AUTHORS.rst  CHANGELOG.md  CHANGES.txt  CITATION.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST  MANIFEST.in  PROCAR  PROCAR_0000  README.md  README.rst.md  TODO  TODO.md  abinit.out  changelog.txt  cuda10.yml  env.yml  procar.py  pyproject.toml  requirements.txt  requirements_docs.txt  setup.json  setup.py  test-abinit-fermi-surface.py  test-abinit.py  test-vasp.py  tests.py  todo.txt  updating_pyprocar.md
.github/experiment_workflows/: example_workflow.yml  on_commit.yml  on_draft_release_creation.yml  on_tag_creation_or_push.yml  run_script_on_commit.yml
.github/scripts/: summarize_pr_commits.py  update_merge_commit.py
.github/workflows/: pull-request-close-merge-main.yml  pull-request-summary.yml  python-publish.yml
abinit-procars/: PROCAR_0001
binder/: environment.yml
docs/: .buildinfo  .~lock.PyProcar_Manual.docx#  .~lock.PyProcar_Manual_package.docx#  2Dspin.html  3Dspin.html  Makefile  PROCAR.FORMAT  PyProcar_Manual.docx  PyProcar_Manual_package.docx  bandgap.html  bands.html  bandsdos.html  cat.html  cite.html  comparebands.html  contributors.html  developers.html  dftprep.html  documentation.ipynb  dos.html  fermi3D.html  filter.html  fonts.html  genindex.html  index.html  installation.html  kmesh.html  kpath.html  make.bat  modules.html  objects.inv  output.html  py-modindex.html  pyprocar documentation.ipynb  pyprocar.abinitparser.html  pyprocar.core.html  pyprocar.doscarplot.html  pyprocar.elkparser.html  pyprocar.fermisurface.html  pyprocar.fermisurface3d.html  (+20 more)
docs/_modules/: index.html
docs/_sources/: 2Dspin.rst.txt  3Dspin.rst.txt  bands.rst.txt  bandsdos.rst.txt  cat.rst.txt  cite.rst.txt  comparebands.rst.txt  contributors.rst.txt  developers.rst.txt  dftprep.rst.txt  dos.rst.txt  filter.rst.txt  fonts.rst.txt  index.rst.txt  installation.rst.txt  kpath.rst.txt  modules.rst.txt  pyprocar.abinitparser.rst.txt  pyprocar.doscarplot.rst.txt  pyprocar.fermisurface3d.rst.txt  pyprocar.lobsterparser.rst.txt  pyprocar.procarfilefilter.rst.txt  pyprocar.procarunfold.rst.txt  pyprocar.rst.txt  pyprocar.utilsprocar.rst.txt  repair.rst.txt  sg_execution_times.rst.txt  tutorials.rst.txt  unfold.rst.txt
docs/_static/: documentation_options.js
docs/api/: index.html
docs/backup/: 2Dspin.html  3Dspin.html  bands.html  bandsdos.html  cat.html  cite.html  comparebands.html  developers.html  dftprep.html  dos.html  filter.html  index.html  installation.html  kmesh.html  kpath.html  repair.html  tutorials.html  unfold.html
docs/dftprep/: abinit.html  dftb+.html  elk.html  index.html  lobster.html  qe.html  siesta.html  vasp.html
docs/doctrees/: 2Dspin.doctree  3Dspin.doctree  bands.doctree  cat.doctree  cite.doctree  comparebands.doctree  contributors.doctree  environment.pickle  filter.doctree  index.doctree  installation.doctree  kmesh.doctree  kpath.doctree  repair.doctree  tutorials.doctree  unfold.doctree
docs/examples/: index.html  sg_execution_times.html
docs/getting-started/: authors.html  index.html  installation.html  why.html
docs/html/: .buildinfo  2Dspin.html  3Dspin.html  cite.html  comparebands.html  contributors.html  filter.html  genindex.html  index.html  installation.html  kmesh.html  kpath.html  searchindex.js  unfold.html  (+1 more)
docs_bak/: PyProcar_Manual.docx  documentation.ipynb  ~$Procar_Manual.docx
examples/: README.rst  index.rst
pyprocar/: #scriptUnfold.py#  .#scriptDosplot.py  .#scriptUnfold.py  KPOINTS_band  POSCAR  __init__.py  _version.py  download_examples.py  fermi3D.py  info.py  scriptAbinitMerge.py  scriptBandGap.py  scriptBandsDosplot.py  scriptBandsDosplot_old.py  scriptBandsplot.py  scriptBandsplot1.py  scriptBandsplot_old.py  scriptCat.py  scriptCompareBands.py  scriptDosplot.py  scriptDosplot_old.py  scriptFermi2D.py  scriptFermi3D.py  scriptFilter.py  scriptKmesh2D.py  scriptKpath.py  scriptRepair.py  scriptSpin_asymmetry.py  scriptUnfold.py  scriptUnfold_new.py  scriptUnfold_old.py  scriptVector.py  splash.py  version.py
pyprocar3/: __init__.py  scriptAbinitMerge.py  scriptBandsplot.py  scriptCat.py  scriptFermi2D.py  scriptFilter.py  scriptVector.py
scripts/: dftb+2procar.py  download.py  poscar.py  procar.py  tmp.py  utils.py  workflow_generate_changlog_on_recent_tag.py  workflow_update_release_body.py
sphinx/: .dos.rst.swp  2Dspin.rst  Makefile  bandgap.rst  bands.rst  bandsdos.rst  cat.rst  cite.rst  comparebands.rst  conf.py  contributors.rst  developers.rst  dftprep.rst  dos.rst  dos.rst.txt  errors.txt  fermi3D.rst  filter.rst  index.rst  installation.rst  kmesh.rst  kpath.rst  make.bat  modules.rst  pyprocar.core.rst  pyprocar.elkparser.rst  pyprocar.fermisurface3d.rst  pyprocar.procarparser.rst  pyprocar.procarplot.rst  pyprocar.procarselect.rst  pyprocar.procarsymmetry.rst  pyprocar.qeparser.rst  pyprocar.rst  pyprocar.vaspxml.rst  repair.rst  scriptSpin_asymmetry.rst  tutorials.rst  unfold.rst
tests/: test_core_brillouin_zone.py  test_core_dos.py  test_core_ebs.py  test_core_fermisurface.py  test_core_kpath.py  test_core_structure.py  test_scriptBandsplot.py
vasp-procars/: OUTCAR  POSCAR
(+2531 files in other folders)
